[package]
name = "meet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.111"
yup-oauth2 = "8.3.2"
chrono = "0.4.33"
reqwest = { version = "0.11.23", features = ["json"] }
open = "5.0.1"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
home = "0.5.9"
